@@ -4,6 +4,7 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Add GD25F256F SPI NOR Flash support.
   * Add W25Q64JVIM SPI NOR Flash support.
   * Add MX25L4005A SPI NOR Flash support.
+  * Add MX25U Series SPI NOR Flash support.
   * Add -k option to skip BAD blocks or pages when reading and writing NAND flash.
   * Add M25P05/M25P10/M25P20/M25P40/M25P80/M25P32/M25P64/N25Q016A/N25Q512A SPI NOR Flash support.
   * Add P25D05H/P25D10H/P25D20H/P25D40H/P25D80H/PY25Q128HA SPI NOR Flash support.
@@ -19,4 +20,4 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Fix print size in KB when size is less than 1MB.
   * Fix when SPI_NAND_FLASH_DEBUG is enabled.
 
- -- McMCC <mcmcc@mail.ru>  Sun, 19 May 2024 03:58:31 +0800
+ -- McMCC <mcmcc@mail.ru>  Wed, 5 Jun 2024 20:25:31 +0800
